Bug 346900 - floating point exception if folder in testing area is dropped onto itself twice
Summary: floating point exception if folder in testing area is dropped onto itself twice
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: 5.17.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 347070 350859 353699 399816 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-29 12:42 UTC by Patrick Auernig
Modified: 2020-01-22 21:33 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.3
Sentry Crash Report:


Attachments
gdb backtrace (6.71 KB, text/plain)
2015-04-29 12:52 UTC, Patrick Auernig
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Auernig 2015-04-29 12:42:13 UTC
If I drag the folder named "Drag Me"  in the testing area and drop it on itself two times,
the application crashes with a floating point exception.



Reproducible: Always

Steps to Reproduce:
1. start the control module via kcmshell5 kcm_touchpad or systemsettings
2. use the testing area

Actual Results:  
Console output:

kf5.kservice.sycoca: Trying to open ksycoca from "/home/valeth/.xdg/cache/ksycoca5"
Width:  3540  height:  2824
Approx. resX:  39  resY:  56
Touchpad resolution: x:  42  y:  68
Final resolution x: 42  y: 68

# drag and drop once
Trying to construct an instance of an invalid type, type id: 6684783
Trying to construct an instance of an invalid type, type id: 6357095
Trying to construct an instance of an invalid type, type id: 620756992

# drag and drop a second time
Trying to construct an instance of an invalid type, type id: 6684783
Trying to construct an instance of an invalid type, type id: 6357095
Trying to construct an instance of an invalid type, type id: 620756992
Trying to construct an instance of an invalid type, type id: 2561
Trying to construct an instance of an invalid type, type id: 67138048
Trying to construct an instance of an invalid type, type id: 7143424

# crash
[1]    24855 floating point exception (core dumped)  kcmshell5 kcm_touchpad
Comment 1 Patrick Auernig 2015-04-29 12:52:22 UTC
Created attachment 92324 [details]
gdb backtrace
Comment 2 Rajeesh K V 2015-04-29 18:49:14 UTC
Thanks for the report, I can reproduce it.
Unfortunately, the trace looks all related to standard Qt code. Couldn't see anything specific from kcm_touchpad code. Will keep investigating.
Comment 3 Rajeesh K V 2015-05-03 07:42:30 UTC
*** Bug 347070 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2015-08-02 09:38:45 UTC
*** Bug 350859 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2015-10-10 22:09:01 UTC
*** Bug 353699 has been marked as a duplicate of this bug. ***
Comment 6 Rajeesh K V 2016-07-28 04:25:09 UTC
*** Bug 366113 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2017-06-22 16:31:56 UTC
Git commit 5c3b8c7afa4a00fccd820d1a34975b0791cda257 by Christoph Feck.
Committed on 22/06/2017 at 16:29.
Pushed by cfeck into branch 'Plasma/5.10'.

Fix crashes with 'Drag me' in touchpad test area
Related: bug 366113
FIXED-IN: 5.10.3

Differential Revision: https://phabricator.kde.org/D6334

M  +2    -8    kcms/touchpad/src/kcm/xlib/testarea.cpp
M  +1    -1    kcms/touchpad/src/kcm/xlib/ui/testarea.ui

https://commits.kde.org/plasma-desktop/5c3b8c7afa4a00fccd820d1a34975b0791cda257
Comment 8 Christoph Feck 2018-10-30 20:05:14 UTC
*** Bug 399816 has been marked as a duplicate of this bug. ***