Fix crashes with 'Drag me' in touchpad test area

BUG: 346900
BUG: 366113
FIXED-IN: 5.10.3

Differential Revision: https://phabricator.kde.org/D6334